--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "simplefin"
-version = "0.1.0"
+version = "0.2.0.dev"
 description = "Add your description here"
 readme = "README.md"
 authors = [
