--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -93,23 +93,24 @@ jobs:
           "$GITHUB_REF_NAME" dist/**
           --repo "$GITHUB_REPOSITORY"
 
-  # publish-to-testpypi:
-  #   name: Publish to TestPyPI
-  #   runs-on: ubuntu-24.04
-  #   needs: [build]
-  #   environment:
-  #     name: testpypi
-  #     url: https://test.pypi.org/p/simplefin
-  #   permissions:
-  #     id-token: write
-  #   steps:
-  #     - name: Download distribution packages
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name: python-packages
-  #         path: dist/
-  #     - name: Publish to TestPyPI
-  #       uses: pypa/gh-action-pypi-publish@release/v1
-  #       with:
-  #         repository-url: https://test.pypi.org/legacy/
-  #         verbose: true
+  publish-to-testpypi:
+    name: Publish to TestPyPI
+    runs-on: ubuntu-24.04
+    needs: [build]
+    environment:
+      name: testpypi
+      url: https://test.pypi.org/p/simplefin
+    permissions:
+      id-token: write
+    steps:
+      - name: Download distribution packages
+        uses: actions/download-artifact@v4
+        with:
+          name: python-packages
+          path: dist/
+      - name: Publish to TestPyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
+          skip-existing: true
+          verbose: true
