Don't run tests on master since its part of publish

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,7 +2,7 @@ name: Test
 
 on:
   push:
-    branches: [main, wip]
+    branches-ignore: [main]
   pull_request:
   workflow_dispatch:
   workflow_call:
