--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,6 @@ dev = [
 [tool.hatch.version]
 source = "vcs"
 raw-options = { local_scheme = "no-local-version" }
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/simplefin"]
