change header in release notes

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -17,6 +17,8 @@ categories:
   - title: "Dependency Updates"
     labels: [dependencies]
 
+category-template: "### $TITLE"
+
 template: |
   ## What's Changed
 
