--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "cogapp>=3.4.1",
     "pytest>=8.3.4",
     "pytest-httpx>=0.35.0",
     "ruff>=0.9.0",
